2002-05-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/clock.test: added clock-9.1
	* compat/strftime.c:
	* generic/tclClock.c:
	* generic/tclInt.decls:
	* generic/tclIntDecls.h:
	* unix/tclUnixTime.c: fix for Windows msvcrt mem leak caused by
	using an env(TZ) setting trick for in clock format -gmt 1.  This
	also makes %s seem to work correctly with -gmt 1 as well as
	making it a lot faster by avoid the env(TZ) hack.  TclpStrftime
	now takes useGMT as an arg.  [Bug #559376]

2002-05-20  Daniel Steffen  <das@users.sourceforge.net>

	* mac/tclMacChan.c: use MSL provided creator type if available
	instead of the default 'MPW '.

2002-04-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure:
	* unix/tcl.m4: change HP-11 SHLIB_LD_LIBS from "" to ${LIBS} so
	that the .sl knows its dependent libs.

2002-04-26  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/obj.test (obj-11.[56]): Test conversion to boolean more
	thoroughly.
	* generic/tclObj.c (SetBooleanFromAny): Could not interpret
	integers that did not look like doubles as booleans [Bug 548686]

2002-04-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdIL.c (InfoBodyCmd): 
	* tests/info.test (info-2.6): Proc bodies without string reps
	would report as empty [Bug #545644]

2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclNamesp.c:
	* tests/info.test:  [Bug 545325 ] info level didn't report
	namespace eval, bug report by Richard Suchenwirth.

2002-04-18  Don Porter  <dgp@users.sourceforge.net>

	* doc/msgcat.n: Added "package require"s to msgcat documentation.

2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c:
	* tests/expr-old.test: fix for [Bug #542588] (Phil Ehrens), where
	"too large integers" were reported as "floating-point value" in
	[expr] error messages.

2002-04-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl.m4: Enabled COFF as well as CV style debug info with
	--enable-symbols to allow Dr. Watson users to see function info.